# Image-Processing-RAW-Images-TP

./: CMakeLists.txt  README.md  main.cpp
src/: image.cpp  image.h
